--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.12.1",
     "gatsby-plugin-google-analytics": "^4.12.1",
+    "gatsby-plugin-google-gtag": "^4.12.1",
     "gatsby-plugin-image": "^2.12.1",
+    "gatsby-plugin-layout": "^3.12.1",
     "gatsby-plugin-mdx": "^3.12.1",
     "gatsby-plugin-netlify-cms": "^6.12.1",
     "gatsby-plugin-react-helmet": "^5.12.1",
@@ -29,6 +31,7 @@
     "netlify-cms-app": "^2.15.72",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.3.5"
   }
 }
